Thu Mar  9 19:32:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - client/upsrw.c: swapped parameters in memset() call
 - drivers/tripplite_usb.c: off-by-one buffer overflow

Thu Mar  9 16:36:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c: sanity check for fatal()

Sat Mar  4 14:32:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/safenet.c: increase timeout for reading replies from the UPS

Fri Mar  3 20:25:00 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/common.c: handle problems with get_user_pwent() directly,
   instead of first returning to the caller

Fri Mar  3 09:42:46 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - common/common.c: set errno=ENOENT in get_user_pwent() if user not found

Mon Feb 27 19:23:24 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-utalk, mge-shut, snmp-ups: remove the zero prefix on exposed
   data values

Mon Feb 27 18:36:30 UTC 2006 / Arnaud Quette <aquette.dev@debian.org>

 - Move the debian directory to packaging/ to avoid conflict with
   the official Debian build process

Mon Feb 27 16:06:20 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Add Compaq R3000 XR and R5500 XR to driver.list.

Sun Feb 26 13:45:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsdrvctl: remove superfluous 'xstrdup' from shutdown_driver

Thu Feb 16 13:25:00 UTC 2006 / Charles Lepple <clepple@gmail.com>

 - Converted repository from CVS to Subversion
 - Development branch is now trunk

Wed Feb 15 10:20:10 UTC 2006 / Kjell Claesson <kjell.claesson@telia.com>

 - Apply patch from Niklas
   * Replaces output.voltage.target.battery and
      output.voltage.target.line with output.voltage.nominal.

Sun Feb 12 11:54:57 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: rewrote logical-to-physical value conversion. Rewrote
   extraction of logical values from report. Added Kelvin-to-Celsius
   conversion. Tweaked APC date conversion. Back-UPS BF500 support.  