@@ -1,3 +1,7 @@
+Fri Mar 17 12:15:34 EST 2006 / Charles Lepple <clepple@gmail.com>
+
+ - drivers/tripplite_usb.c: fixed float/double mismatch in battery voltage
+
 Thu Mar  9 19:32:00 2006 / Arjen de Korte <arjen@de-korte.org>
 
  - client/upsrw.c: swapped parameters in memset() call
